[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paisa"
version = "0.1.4"
description = "Paisa — smart LLM routing that saves you money"
requires-python = ">=3.10"
dependencies = [
    "litellm",
    "python-dotenv",
    "platformdirs",
    "requests",
]

[project.scripts]
paisa = "paisa.cli:main"
